Added getDocumentByType method
